Correccion de get(0) a getFirst(), correccion sugerida por SonarQube